# create-fastapi-project

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
create_fastapi_app/: __main__.py  create_app.py  main.py
create_fastapi_app/helpers/: git.py  install.py
create_fastapi_app/templates/: __init__.py
create_fastapi_app/templates/basic/: Makefile  README.md  docker-compose.yml
create_fastapi_app/templates/basic/app/app/core/: config.py
create_fastapi_app/templates/basic/backend/app/alembic/versions/: 2023-03-04-23-15_5591a516fc47.py
create_fastapi_app/templates/basic/backend/app/app/: main.py
create_fastapi_app/templates/basic/backend/app/test/: test_main.py
create_fastapi_app/templates/basic/backend/app/test/api/: test_login.py
create_fastapi_app/templates/full/backend/app/alembic/versions/: 2022-10-03-18-32_3223652d21bd.py
create_fastapi_project/: __main__.py  create_app.py  main.py
create_fastapi_project/helpers/: git.py  install.py
create_fastapi_project/templates/: __init__.py
create_fastapi_project/templates/basic/: .env.example  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml
create_fastapi_project/templates/basic/app/app/: main.py
create_fastapi_project/templates/basic/app/app/api/v1/: api.py
create_fastapi_project/templates/basic/app/app/core/: config.py
create_fastapi_project/templates/basic/backend/app/app/core/: config.py
create_fastapi_project/templates/basic/caddy/: Caddyfile
create_fastapi_project/templates/full/: Makefile  README.md  docker-compose-dev.yml  docker-compose-sonarqube.yml  docker-compose-test.yml  docker-compose.yml
create_fastapi_project/templates/full/backend/: Dockerfile
create_fastapi_project/templates/full/backend/app/: pyproject.toml
create_fastapi_project/templates/full/backend/app/alembic/: env.py
create_fastapi_project/templates/full/backend/app/app/: main.py
create_fastapi_project/templates/full/backend/app/app/api/: celery_task.py
create_fastapi_project/templates/langchain_basic/: .env.example  .gitignore  Makefile  README.md  docker-compose-dev.yml  docker-compose.yml  streamlit.yml
create_fastapi_project/templates/langchain_basic/app/: pyproject.toml
create_fastapi_project/templates/langchain_basic/app/app/: main.py
create_fastapi_project/templates/langchain_basic/app/app/api/v1/: api.py
create_fastapi_project/templates/langchain_basic/app/app/api/v1/endpoints/: chat.py
create_fastapi_project/templates/langchain_basic/app/app/core/: config.py
create_fastapi_project/templates/langchain_basic/app/app/schemas/: adaptive_cards_schema.py  message_schema.py
create_fastapi_project/templates/langchain_basic/app/app/templates/: chat.py
create_fastapi_project/templates/langchain_basic/app/app/utils/: callback.py  chains.py  prompt_zero.py  tools.py
create_fastapi_project/templates/langchain_basic/app/app/utils/adaptive_cards/: cards.py
create_fastapi_project/templates/langchain_basic/backend/app/app/: main.py
create_fastapi_project/templates/langchain_basic/caddy/: Caddyfile
create_fastapi_project/templates/langchain_basic/frontend/: Dockerfile
create_fastapi_project/templates/langchain_basic/frontend/app/: main.py  requirements.txt  streamlit_app.py
create_fastapi_server/: __main__.py  create_app.py  main.py
create_fastapi_server/helpers/: install.py
create_fastapi_server/templates/: __init__.py
create_fastapi_server/templates/basic/: Dockerfile  README.md
create_fastapi_server/templates/basic/app/app/: main.py
fastapi_create_app/: __main__.py  create_app.py  main.py
fastapi_create_app/helpers/: install.py
fastapi_create_app/templates/: __init__.py
fastapi_create_app/templates/basic/: README.md
my_app/: .env.example  README.md
my_app/app/: pyproject.toml
my_app/app/app/api/v1/endpoints/: weather.py
(+15 files in other folders)
