[tool.poetry]
name = "app"
version = "0.1.0"
description = "A sample fastapi project created with create-fastapi-app"
authors = [ "Your Name <your@email.com>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "app"


[tool.poetry.group.dev.dependencies]
pytest = "^5.2"
mypy = "^1.5.0"
ruff = "^0.0.284"
black = "^23.7.0"

[tool.black]
line-length = 88
target-version = [ "py37", "py38", "py39", "py310", "py311",]
exclude = "((.eggs | .git | .pytest_cache | build | dist))"

[tool.ruff]
line-length = 88
exclude = [ ".git", "__pycache__", ".mypy_cache", ".pytest_cache",]
select = [ "E", "W", "F", "C", "B",]
ignore = [ "B904", "B006", "E501", "B008", "C901",]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [ "alembic", "__pycache__",]

[tool.build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">3.9,<3.12"
fastapi = {extras = ["all"], version = "^0.101.0"}
fastapi-pagination = {version = "^0.12.7", extras = ["sqlalchemy"]}
asyncer = "^0.0.2"
httpx = "^0.24.1"

[tool.ruff.per-file-ignores]
"__init__.py" = [ "F401",]
